# airball-display

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/__display__/: CMakeLists.txt  ab_main.cpp  aerodynamics_test.cpp  airdata_test.cpp  controller.cpp  controller.h  replay_main.cpp
src/airball/: CMakeLists.txt
src/airball/app/: CMakeLists.txt  ab_main.cpp
src/airball/app2/telemetry/: AbstractTelemetryProcess.cpp  AbstractTelemetryProcess.h  CanBusTelemetryProcess.cpp  CanBusTelemetryProcess.h  ITelemetryProcess.h  UdpTelemetryProcess.cpp  UdpTelemetryProcess.h
src/airball/model/: Airdata.cpp  Airdata.h  CMakeLists.txt  IAirballModel.h  IAirdata.h  ISettings.h  Parameter.h  Settings.cpp  Settings.h  SettingsStore.h  aerodynamics.cpp  aerodynamics.h
src/airball/model/telemetry/: CMakeLists.txt  FakeTelemetry.cpp  FakeTelemetry.h  ILineReader.h  ITelemetry.cpp  ITelemetry.h  MessageBlockFormat.cpp  MessageBlockFormat.h  NMEAFormat.cpp  NMEAFormat.h  SerialTelemetry.cpp  SerialTelemetry.h  SerialTelemetryTest_main.cpp  TelemetryIds.h  UdpPacketReader.cpp  UdpPacketReader.h  UdpPacketSender.cpp  UdpPacketSender.h  UdpTelemetry.cpp  UdpTelemetry.h  telemetry.cpp  telemetry.h  telemetry_client.h  udp_packet_reader.cpp  udp_packet_reader.h  udp_packet_reader_main.cpp  udp_packet_test_main.cpp  udp_telemetry_client.cpp  udp_telemetry_client.h
src/airball/screen/: AbstractScreen.h  CMakeLists.txt  bcm2835_smi_ioctl_defs.cpp  framebuffer_screen.h  image_screen.cpp  image_screen.h  st7789vi_frame_writer.cpp  st7789vi_frame_writer.h  st7789vi_frame_writer_gpio.h  st7789vi_frame_writer_smi.h  st7789vi_screen.cpp  st7789vi_screen.h  x11_screen.cpp  x11_screen.h
src/airball/sound_mixer/: CMakeLists.txt  sine_envelope_layer.cpp  sine_layer.cpp  sound_layer.h  sound_mixer.cpp  sound_mixer.h  sound_mixer_test_main.cpp
src/airball/sound_scheme/: CMakeLists.txt  airball_sound_scheme.cpp  airball_sound_scheme.h  flyonspeed_scheme.cpp  flyonspeed_scheme.h  sound_scheme.cpp  sound_scheme.h  sound_scheme_main.cpp  sound_scheme_test_main.cpp  stallfence_scheme.cpp  stallfence_scheme.h
src/airball/util/: Base16.cpp  Base16.h  Base16Encoding.cpp  Base16Encoding.h  Base16EncodingTest_main.cpp  CMakeLists.txt  DeviceFileAdapter.cpp  DeviceFileAdapter.h  FileAdapter.cpp  FileAdapter.h  IDeviceFileAdapter.h  IFileAdapter.h  LinearRateFilter.cpp  LinearRateFilter.h  Process.cpp  Process.h  atomic_store.cpp  atomic_store.h  atomic_store_test_main.cpp  linear_rate_filter_test_main.cpp  one_shot_timer.cpp  one_shot_timer.h  plot_test_csv.sh  string_compression.cpp  string_compression.h  string_compression_test.cpp
src/airball/view/: AirballView.cpp  AirballView.h  CMakeLists.txt  widgets.cpp  widgets.h
src/framework/: Application.h  IEventQueue.h  IScreen.h  ISoundLayer.h  ISoundMixer.h  ISoundScheme.h  IView.h
